--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "@vuepress/theme-default",
-  "version": "1.3.1",
-  "description": "Default theme for VuePress",
+  "name": "@ianwalter/vuepress-theme-brooks",
+  "version": "0.0.0",
+  "description": "TODO",
   "keywords": [
     "documentation",
-    "generator",
     "vue",
-    "vuepress"
+    "vuepress",
+    "theme"
   ],
-  "homepage": "https://github.com/vuejs/vuepress/packages/@vuepress/theme-default#readme",
+  "homepage": "https://github.com/ianwalter/vuepress-theme-brooks#readme",
   "bugs": {
     "url": "https://github.com/vuejs/vuepress/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vuejs/vuepress.git",
-    "directory": "packages/@vuepress/theme-default"
+    "url": "git+https://github.com/ianwalter/vuepress-theme-brooks.git"
   },
-  "license": "MIT",
-  "author": "Evan You",
+  "license": "SEE LICENSE IN LICENSE",
+  "author": {
+    "name": "Ian Walter",
+    "url": "https://ianwalter.dev"
+  },
   "main": "index.js",
   "dependencies": {
     "@vuepress/plugin-active-header-links": "^1.3.1",
@@ -33,11 +35,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "maintainers": [
-    {
-      "name": "ULIVZ",
-      "email": "chl814@foxmail.com"
-    }
-  ]
+  }
 }
