--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ianwalter/vuepress-theme-brooks",
   "version": "0.0.0",
-  "description": "TODO",
+  "description": "A flexible VuePress theme based on the default theme",
   "keywords": [
     "documentation",
     "vue",
