--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@ianwalter/vuepress-theme-brooks",
   "version": "1.0.1",
   "description": "A flexible VuePress theme based on the default theme",
+  "main": "index.js",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "keywords": [
     "documentation",
     "vue",
@@ -21,7 +25,6 @@
     "name": "Ian Walter",
     "url": "https://ianwalter.dev"
   },
-  "main": "index.js",
   "dependencies": {
     "@vuepress/plugin-active-header-links": "^1.3.1",
     "@vuepress/plugin-nprogress": "^1.3.1",
@@ -37,9 +40,19 @@
     "access": "public"
   },
   "devDependencies": {
+    "@ianwalter/eslint-config-vue": "^2.0.1",
     "@ianwalter/release": "^5.0.0",
     "@ianwalter/renovate-config": "^1.2.0"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@ianwalter/vue"
+    ]
+  },
+  "eslintIgnore": [
+    "__tests__"
+  ],
   "renovate": {
     "extends": [
       "@ianwalter"
